--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,6 +1,7 @@
 <h1>{{ post.title }}</h1>
 <p>{{ post.content }}</p>
 <p>By {{ post.author }} on {{ post.published_date }}</p>
+<p>Tags: {% for tag in post.tags.all %}<a href="{% url 'posts-by-tag' tag.name %}">{{ tag.name }}</a> {% endfor %}</p>
 {% if user == post.author %}
 <a href="{% url 'post-update' post.pk %}">Edit</a>
 <a href="{% url 'post-delete' post.pk %}">Delete</a>
